--- a/app/views/movies/index.html.haml
+++ b/app/views/movies/index.html.haml
@@ -1,12 +1,21 @@
 -#  This file is app/views/movies/index.html.haml
+-#      %th= link_to "Movie Title #{movie.title}", movie_path(movie)
+
 %h1 All Movies
+
+= form_tag @cur_path, :method => :get do
+  Include: 
+  - @all_ratings.each do |rating|
+    = rating
+    = check_box_tag "ratings[#{rating}]", 1, @rats.has_key?("#{rating}")
+  = submit_tag 'Refresh', :id => :ratings_submit
 
 %table#movies
   %thead
     %tr
-      %th Movie Title
+      %th{:class => (@title_header ? "hilite" : "")}= link_to "Movie Title", movies_path(:title_header, :id => :title_header, :ratings => @rats)
       %th Rating
-      %th Release Date
+      %th{:class => (@release_date_header ? "hilite" : "")}= link_to "Release Date", movies_path(:release_date_header, :id => :release_date_header, :ratings => @rats)
       %th More Info
   %tbody
     - @movies.each do |movie|
